--- a/css/style.css
+++ b/css/style.css
@@ -20,5 +20,51 @@ header, div.footer-bottom {
 }
 
 img.avatar {
-    max-width: 20%;
+    width: 250px;
+}
+
+#portfolio img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.start {
+    font-size: 40px;
+}
+
+.qualification {
+    font-size: 20px;
+}
+
+.download {
+    padding: 5px 10px;
+    border-radius: 5px;
+    border: 1px solid white ;
+}
+
+.icons i {
+    font-size: 20px;
+    padding: 5px 10px;
+    border: 1px solid white;
+}
+
+#contact .form-control {
+    border: 0;
+    border-radius: 0;
+    border-bottom: 1px solid #999;
+}
+
+label {
+    padding-top: 10px;
+}
+
+.bg-green {
+    background-color: #1ABC9C;
+    border-color: #1ABC9C;
+}
+
+.bg-green:focus,
+.bg-green:hover {
+    background-color: #1ABC9C;
+    border-color: #1ABC9C;
 }
