changed a class name

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ label {
 }
 
 /**Footer**/
-.icons i {
+.social-icons i {
     font-size: 20px;
     padding: 5px 10px;
     border: 1px solid white;
